--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-api-tutorial-updated",
+  "name": "rest-api",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Tom Nagle",
@@ -12,6 +12,7 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -35,6 +36,5 @@
     "@types/pino": "^6.3.11",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
-  },
-  "description": "Note: This repository includes the [postman collection for the finished API](postman_collection.json)"
+  }
 }
