--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Tom Nagle",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -28,12 +29,19 @@
     "@types/config": "^0.0.39",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.2.3",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.175",
+    "@types/mongodb-memory-server": "^2.3.0",
     "@types/mongoose": "^5.11.97",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^16.10.2",
     "@types/pino": "^6.3.11",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.3.1",
+    "mongodb-memory-server": "^8.10.1",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   }
