new steps in config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,12 @@ jobs:
 
     steps:
       - checkout
+      # convert variables to ssh format
+      - run:
+          name: Convert private key to RSA
+          command: |
+            ssh-keygen -f PRIVATE_KEY -m 'PEM' -t 'RSA' -q -N ''
+            ssh-keygen -f PUBLIC_KEY -m 'PEM' -t 'RSA' -q -N ''
 
       # Install TypeScript
       - run: sudo npm install -g typescript
