--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run:
           name: Convert private key to RSA
           command: |
-            ssh-keygen -f $PRIVATE_KEY -m 'PEM' -t 'RSA' -q -N ''
+            ssh-keygen -f $PRIVATE_KEY -m 'PEM' -t 'RSA' -q -N '' &&
             ssh-keygen -f $PUBLIC_KEY -m 'PEM' -t 'RSA' -q -N ''
 
       # Install TypeScript
